--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,12 @@
 *.patch
 *.log
 /doxygen
+xcuserdata
+*.mode1v3
+*.mode2v3
+*.perspectivev3
+*.pbxuser
+!default.pbxuser
+!default.mode1v3
+!default.mode2v3
+!default.perspectivev3
